--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.1.5",
     "react-scripts": "5.0.1",
     "sass": "^1.83.4",
     "typescript": "^4.4.2",
