--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.83.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
